Fix mouse pointer event clientX/Y

Before this change the clientX/Y was set from
root frame coordinates. This CL transform such
coordinates to frame coordinates for setting
clientX/Y.

BUG=605676

Review-Url: https://codereview.chromium.org/1960233002
Cr-Commit-Position: refs/heads/master@{#393247}

Former-commit-id: 85ece81cc3561eb24ecc96f25d7ae9ecd40c219f